--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
+    "vite-plugin-pwa": "^0.17.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
